--- a/morol_resume-openfont.tex
+++ b/morol_resume-openfont.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Deedy - One Page Two Column Resume
 % LaTeX Template
-% Version 1.0 (17/12/2020)
+% Version 1.1 (26/07/2021)
 %
 % Original author:
 % Zinnatul Islam (https://jinnatul.github.io/)
@@ -58,7 +58,7 @@
 %     LAST UPDATED DATE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\lastupdated
+% \lastupdated
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -67,8 +67,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Zinnatul}{Islam}{ 
 \href{https://github.com/jinnatul}{Github} |
-\href{https://www.linkedin.com/in/jinnatul-islam-morol-b07172143/}{Linkedin} |
-\href{https://jinnatul.github.io/}{Portfolio} |
+\href{https://www.linkedin.com/in/morol1957/}{Linkedin} |
+{+880 1793-696177} |
 \href{mailto:morolswediu@gmail.com}{morolswediu@gmail.com}
 }
 
@@ -78,7 +78,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.3\textwidth} 
+\begin{minipage}[t]{0.34\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
@@ -88,7 +88,7 @@
 
 \subsection{Daffodil International University}
 \descript{BSc in Software Engineering}
-\location{Dec 2020 | Dhaka, BD}
+\location{Jan 2021 | Dhaka, BD}
 \location{CGPA: 3.83 / 4.0}
 \sectionsep
 
@@ -99,53 +99,60 @@
 \section{Skills}
 \subsection{Technical Skills}
 \location{Proficient with:}
-Javascript(ES6) \textbullet{}   Node.js \textbullet{} MongoDB \\
-SQL Server \textbullet{} React \textbullet{} GraphQL \\ 
-Redis \textbullet{} Linux \textbullet{} Unit Testing \\
-HTML5 \textbullet{} Sass \textbullet{} CSS3 \textbullet{} Agile(Scrum) \\
-Docker \\
+\textbullet{} JavaScript (ES6+) \textbullet{}   Node.js \\
+\textbullet{} Express.js \textbullet{} GraphQL \\
+\textbullet{} TypeScript \textbullet{} MongoDB \textbullet{} Redis \\
+\textbullet{} PostgreSQL \textbullet{} AWS (S3, SQS) \textbullet{} Linux \\
+\textbullet{} React  \textbullet{} Github CI/CD \textbullet{} Jenkins \\
 \location{Familiar with:}
-C \textbullet{} C++ \textbullet{} .Net core \textbullet{} PHP \\
-ML \textbullet{} Matlab \textbullet{} MySQL \textbullet{} PostgreSQL\\
-\sectionsep
-
-\subsection{Soft Skills}
-\location{Outstanding:}
-Communication (Bangla, English) \\
-Motivator \\
+\textbullet{} Python
+\textbullet{} MySQL \textbullet{} SQL Server\\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links} 
-\href{https://github.com/jinnatul}{Github} \\
-\href{https://www.linkedin.com/in/jinnatul-islam-morol-b07172143/}{Linkedin} \\
-\href{https://twitter.com/jinnatul_md}{Twitter} \\
-\href{https://twitter.com/morolswediu}{Twitter-Bot} \\
-\href{https://dev.to/jinnatul}{Dev.to} \\
-\href{https://www.facebook.com/mdjinnatul.islam/}{Facebook} \\
-\href{https://www.youtube.com/channel/UCc9Bj9gAS0wWR0DCvkN3H5Q/videos?view_as=subscriber}{YouTube} \\
-\href{http://programming-jinnatul.blogspot.com/}{Programming-Blog} \\
+\subsection{Links} 
+\textbullet{} \href{https://github.com/jinnatul}{https://github.com/jinnatul} \\
+\textbullet{} \href{https://www.linkedin.com/in/morol1957}{https://www.linkedin.com/in/morol1957} \\
+\textbullet{} \href{https://www.hackerrank.com/jinnatul}{https://www.hackerrank.com/jinnatul} \\
+\textbullet{} \href{https://codeforces.com/profile/jinnatul}{https://codeforces.com/profile/jinnatul} \\
+\textbullet{} \href{https://uhunt.onlinejudge.org/id/901475}{https://uhunt.onlinejudge.org/id/901475} \\
+\textbullet{} \href{https://me.zinnatul.xyz}{Portfolio: https://me.zinnatul.xyz} \\
+\textbullet{} \href{https://zinnatul.xyz}{Blog: https://zinnatul.xyz} \\
+\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     WORK EXPERIENCE
+%   Awards
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{WORK EXPERIENCE}
+\subsection{Awards} 
+\textbullet{} \href{https://www.hackerrank.com/jinnatul}{Gold level Problem Solving (HackerRank)}) \\
+\textbullet{} \href{https://www.hackerrank.com/certificates/be6cd61c8041}{Problem Solving (Intermediate) Certificate (HackerRank)} \\
+\textbullet{} \href{https://www.hackerrank.com/certificates/1f0ca747169a}{Rest API (Intermediate) Certificate (HackerRank)} \\
+\textbullet{} \href{https://www.freecodecamp.org/certification/jinnatul/javascript-algorithms-and-data-structures}{JavaScript Algorithms and Data Structures Certification (www.freecodecamp.org)} \\
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%   Volunteering
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Volunteering}
 \subsection{Daffodil International University}
 \descript{ Trainer, Programming Classes }
 \location{Jan 2019 - Mar 2020 | Dhaka, BD}
-Taking programming classes on basic topics
-of Data Structure and Algorithm (DIU-SWE).
+\vspace{\topsep}
+\begin{tightemize}
+\item Discussed basic Algorithms and Data Structure
+\item Arranged programming contest
+\end{tightemize}
 \sectionsep
 
-\subsection{Article Writing}
-\descript{ Writer, Programming content }
-\location{Jan 2018 - Present | Dhaka, BD}
-Already write 1500+ article on my \href{http://programming-jinnatul.blogspot.com/}{Programming-Blog} \\
-2M+ views on my article
+\subsection{Extra Activities}
+\descript{ Article Writing }
+\location{Writer, Programming content}
+1500+ articles published on my \href{http://programming-jinnatul.blogspot.com/}{programming-blog}, 3.2M+ views on my article
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -156,86 +163,79 @@ Already write 1500+ article on my \href{http://programming-jinnatul.blogspot.com
 
 \end{minipage} 
 \hfill
-\begin{minipage}[t]{0.66\textwidth} 
+\begin{minipage}[t]{0.65\textwidth} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     WORK EXPERIENCE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{WORK EXPERIENCE}
+\runsubsection{V2 Technologies Ltd}
+\descript{| Software Engineer}
+\location{July 2022 – Current}
+\vspace{\topsep}
+\begin{tightemize}
+\item Created and managed consumer contract campaign module for BATB
+\item Played a role to manage my 3 members team and lead the BATB CRM service.
+\item For consumer contracts developed a dynamic module where the supervisor can create route planning
+\item Developed an internal APK distribution platform here to distribute APKs to internal users.
+\item Worked on a sales-related application here managed invoices and orders module
+\item Skills: JavaScript · Node.js · PostgreSQL · Redis · Socket.io · Git
+\end{tightemize}
+\sectionsep
+
+\runsubsection{V2 Technologies Ltd}
+\descript{| Jr Software Engineer}
+\location{Feb 2021 – July 2022}
+\vspace{\topsep}
+\begin{tightemize}
+\item Developed a module where users can filter consumers based on dynamic queries within more than 40M+ data
+\item For users verification(NID) worked with the Porichoy service
+\item Skills: JavaScript · Node.js · PostgreSQL · Redis · Socket.io · Git
+\end{tightemize}
+\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     TECHNICAL PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{TECHNICAL PROJECTS}
+
+\runsubsection{ DebitCredit }
+\descript{\href{https://debitcredit.devfik.com}{[\underline {Website}]}}
+\location{A platform aims to provide a comprehensive solution for managing personal income and expenses. }
+\location{Jun 2021 - Present | Dhaka, BD}
+\vspace{\topsep}
+\begin{tightemize}
+\item Doing requirement analysis from scratch and creating a development pipeline.
+\item Drawing system architecture and creating data structure plan.
+\item Developed all APIs based on system design. Created API documentation using Postman Docs.
+\item Skills: JavaScript · Node.js · PostgreSQL · Jenkins · Nginx . AWS (S3) . Git 
+\end{tightemize}
+\sectionsep
+
+\runsubsection{ Node.JS Boilerplate Template (Nano App) }
+\descript{\href{https://user-images.githubusercontent.com/31995155/185107105-5df974f9-ccf0-467d-a365-5225e8d017eb.mp4}{[\underline {Demo}]}, \href{https://github.com/jinnatul/nano-app}{[\underline {Code}]}}
+\location{Creating a node.js application structure using a single line command. }
+\location{Feb 2022 - Current}
+\vspace{\topsep}
+\begin{tightemize}
+\item ES6+ configuration (Babel)
+\item Clean code structure
+\item Email authentication with OTP verification
+\item Implement MFA using speakeasy
+\item Command: npx nano-app project-name
+\end{tightemize}
+\sectionsep
+
 \runsubsection{ Online Doctor chamber }
-\descript{| a project for \href{https://www.icddrb.org/}{icddr,b} }
+\descript{| a project for \href{https://www.icddrb.org/}{icddr,b} \href{https://play.google.com/store/apps/details?id=com.iccdrb.online_doctor_chember}{[\underline {Demo}]}}
 \location{Aug 2020 - Dec 2020 | Dhaka, BD}
 \vspace{\topsep}
 \begin{tightemize}
-\item Implement REST API using Express.js, MongoDB, Swagger doc.
-\item Unit testing using JEST 
-\item DevOps (Github CI/CD, Docker)
+\item Developed all APIs based on system design. Created API documentation using Swagger.
+\item Worked with the bKash team to integrate the bKash payment gateway 
+\item Skills: JavaScript · Node.js · Express.js . MongoDB . Git . Github CI/CD)
 \end{tightemize}
-\sectionsep
-
-\runsubsection{ Cuntato }
-\descript{\href{https://github.com/pro-js/cuntato}{[Github]}, \href{https://cuntato.herokuapp.com/}{[Website]}}
-\location{An easy and secured solution to get messages from contact form of static or dynamic websites }
-\location{Jul 2020 - Dec 2020 | Dhaka, BD}
-\vspace{\topsep}
-\begin{tightemize}
-\item Implement REST API using Express.js, MongoDB.
-\item DevOps (Github CI/CD)
-\end{tightemize}
-\sectionsep
-
-\runsubsection{ Minisauras }
-\descript{\href{https://github.com/TeamTigers/minisauras}{[Github]}, \href{https://github.com/marketplace/actions/minisauras}{[Marketplace]}}
-\location{ An open-source CI/CD automation tool based on Octocat. GitHub Actions that pulls all the JavaScript and CSS files from your base branch, minify them and creates a pull-request with a new branch. }
-\location{Sep 2020 - Oct 2020 | Dhaka, BD}
-\vspace{\topsep}
-\begin{tightemize}
-\item Implement a Github Action using Node.js and Octocat
-\item DevOps (Github CI/CD)
-\end{tightemize}
-\sectionsep
-
-\runsubsection{ Twitter-Bot }
-\descript{\href{https://github.com/jinnatul/twitter-bot}{[Github]}, \href{https://twitter.com/morolswediu}{[Account]}}
-\location{Twitter bot which will retweet, favorite / like, post, follow, unfollow people.}
-\location{Dec 2020 - Dec 2020 | Dhaka, BD}
-\vspace{\topsep}
-\begin{tightemize}
-\item Implement a Twitter Bot using Node.js and Twitter API.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{ Coronainfobd }
-\descript{\href{https://github.com/TeamTigers/coronainfobd}{[Github]}, \href{https://teamtigers.tech/coronainfobd/}{[Website]}}
-\location{Real-time corona-virus tracker of Bangladesh, which includes latest updates, data visualization, public awareness from WHO and some advice to aware people.}
-\location{May 2020 - Jun 2020 | Dhaka, BD}
-\vspace{\topsep}
-\begin{tightemize}
-\item Dynamically visualize case study
-\item Work on data visualization
-\end{tightemize}
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     RESEARCH
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Research}
-\runsubsection{Food prediction based on mood}
-\descript{| Researcher | \href{https://www.kaggle.com/borapajo/food-choices}{[Data-Set]}}
-\location{Oct 2020 – Dec 2020 | Dhaka, BD}
-Given data about different people's food preferences, let's try to predict the food base on person mood. Create a Linear Regression model that can predict foods base on different criteria like Gender, Calories, Comfort food reasons, Weight.
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     AWARDS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Awards} 
-\begin{tabular}{rll}
-2019	     & Gold level  & Problem Solving (\href{https://www.hackerrank.com/jinnatul}{HackerRank})\\
-\end{tabular}
 \sectionsep
 
 \end{minipage} 
